Assignment-3/y.output
Terminals unused in grammar

   LINK_BANDWIDTH
   LINK_CAPACITY


Grammar

    0 $accept: program $end

    1 program: statement

    2 statement: expression SEMI
    3          | expression SEMI statement
    4          | assignment SEMI
    5          | assignment SEMI statement
    6          | SEMI
    7          | SEMI statement
    8          | loop_statement statement
    9          | loop_statement
   10          | BREAK SEMI statement
   11          | BREAK SEMI
   12          | CONTINUE SEMI statement
   13          | CONTINUE SEMI
   14          | RETURN SEMI statement
   15          | RETURN SEMI
   16          | WAIT SEMI statement
   17          | WAIT SEMI
   18          | condition_statement statement
   19          | condition_statement
   20          | SWITCH LB expression RB LP cases RP
   21          | SWITCH LB expression RB LP cases RP statement
   22          | construct SEMI statement
   23          | construct SEMI

   24 expression: term expression_prime
   25           | term expression_prime op expression
   26           | NOT expression
   27           | function_call op expression
   28           | function_call

   29 expression_prime: PLUS term expression_prime
   30                 | MINUS term expression_prime
   31                 | epsilon

   32 term: factor term_prime

   33 term_prime: MUL factor term_prime
   34           | DIV factor term_prime
   35           | epsilon

   36 factor: FLOAT_ID
   37       | NUM_ID
   38       | mutable
   39       | LP expression RP

   40 assignment: mutable EQUAL expression
   41           | mutable PLUS_EQUAL expression
   42           | mutable MINUS_EQUAL expression
   43           | mutable MUL_EQUAL expression
   44           | mutable DIV_EQUAL expression
   45           | mutable PLUS_PLUS
   46           | mutable MINUS_MINUS
   47           | PLUS_PLUS mutable
   48           | MINUS_MINUS mutable

   49 mutable: ID
   50        | mutable LS expression RS

   51 epsilon: %empty

   52 condition_statement: IF LP expression RP LB statement RB new_condition

   53 new_condition: ELSE IF LP expression RP LB statement RB new_condition
   54              | ELSE LB statement RB
   55              | epsilon

   56 cases: CASE NUM_ID COLON statement cases
   57      | DEFAULT COLON statement
   58      | epsilon

   59 loop_statement: while_body
   60               | for_body

   61 while_body: WHILE LP expression RP LB statement RB

   62 for_body: FOR LP list_assignment SEMI expression SEMI list_assignment RP LB statement RB

   63 list_assignment: assignment next_assignment

   64 next_assignment: COMMA assignment next_assignment
   65                | epsilon

   66 op: GR
   67   | LR
   68   | EQUAL_EQUAL
   69   | LR_EQUAL
   70   | GR_EQUAL
   71   | NOT_EQUAL
   72   | AND_AND
   73   | AND
   74   | OR_OR
   75   | OR

   76 construct: process_construct
   77          | job_construct
   78          | memory_construct
   79          | link_construct
   80          | cluster_construct
   81          | scheduler_construct

   82 scheduler_construct: mutable EQUAL SCHEDULER LP PROCESSOR EQUAL DQ mutable DQ RP

   83 function_call: process_call
   84              | job_call
   85              | memory_call
   86              | scheduler_call

   87 scheduler_call: mutable DOT FIRST_COME_FIRST_SERVE LP RP
   88               | mutable DOT SHORTEST_JOB_NEXT LP RP
   89               | mutable DOT PRIORITY_SCHEDULING LP RP
   90               | mutable DOT SHORTEST_REMAINING_TIME LP RP
   91               | mutable DOT ROUND_ROBIN LP RP
   92               | mutable DOT MULTI_LEVEL_QUEUES LP RP
   93               | mutable DOT SCHEDULE_OBJECT LP mutable RP

   94 name_optional: COMMA NAME EQUAL DQ name_value DQ
   95              | COMMA DQ name_value DQ
   96              | epsilon

   97 name_value: mutable

   98 process_construct: mutable EQUAL process_definition

   99 process_definition: PROCESSOR LP parameters_process_def RP

  100 parameters_process_def: ISA EQUAL SQ isa_value SQ COMMA CLOCK_SPEED COLON clock_value COMMA L1_MEMORY EQUAL l1_value memory_optional_l2

  101 memory_optional_l2: COMMA L2_MEMORY EQUAL l1_value name_optional
  102                   | name_optional

  103 isa_value: ARM
  104          | AMD
  105          | CDC
  106          | MIPS

  107 clock_value: NUM_ID

  108 l1_value: mutable
  109         | memory_definition

  110 process_call: mutable DOT IS_RUNNING LP RP
  111             | mutable DOT SUBMIT_JOBS LP param_process_submit_discard_jobs RP
  112             | mutable DOT GET_CLOCK_SPEED LP RP
  113             | RUN LP param_runprocess RP
  114             | mutable DOT DISCARD_JOB LP param_process_submit_discard_jobs RP

  115 param_process_submit_discard_jobs: mutable
  116                                  | LS lists RS

  117 param_runprocess: mutable
  118                 | LS lists RS

  119 lists: mutable COMMA lists
  120      | mutable

  121 link_construct: mutable EQUAL link_definition

  122 link_definition: LINK LP parameters_link_def RP

  123 parameters_link_def: start_pointnt COMMA end_pointnt COMMA bandwidthnt COMMA channel_capacitynt name_optional

  124 start_pointnt: DQ start_value DQ
  125              | START_POINT EQUAL DQ start_value DQ

  126 start_value: ID

  127 end_pointnt: DQ end_value DQ
  128            | END_POINT EQUAL DQ end_value DQ

  129 end_value: ID

  130 bandwidthnt: bandwidth_value
  131            | BANDWIDTH EQUAL bandwidth_value

  132 bandwidth_value: NUM_ID
  133                | FLOAT_ID

  134 channel_capacitynt: channel_capacity_value
  135                   | CHANNEL_CAPACITY EQUAL channel_capacity_value

  136 channel_capacity_value: FLOAT_ID
  137                       | NUM_ID

  138 cluster_construct: mutable EQUAL CLUSTER LP parameters_cluster_def RP

  139 parameters_cluster_def: processorsnt COMMA topologynt COMMA link_bandwidth_value COMMA link_capicity_value name_optional

  140 processorsnt: PROCESSORS EQUAL param1_value
  141             | param1_value

  142 topologynt: TOPOLOGY EQUAL DQ topology_value DQ
  143           | DQ topology_value DQ

  144 param1_value: mutable
  145             | LS lists RS

  146 topology_value: STAR
  147               | BUS
  148               | RING

  149 link_bandwidth_value: expression

  150 link_capicity_value: expression

  151 job_construct: mutable EQUAL job_definition

  152 job_definition: JOB LP parameters_job_def RP

  153 parameters_job_def: JOB_ID EQUAL job_id_value COMMA FLOPS_REQUIRED EQUAL flops_required_value COMMA DEADLINE EQUAL deadline_value COMMA MEM_REQUIRED EQUAL mem_required_value COMMA AFFINITY EQUAL affinity_value

  154 job_id_value: expression

  155 flops_required_value: NUM_ID

  156 deadline_value: expression

  157 mem_required_value: NUM_ID

  158 affinity_value: LS amd_value COMMA cdc_value COMMA mips_value COMMA dec_value RS

  159 amd_value: FLOAT_ID
  160          | NUM_ID

  161 cdc_value: FLOAT_ID
  162          | NUM_ID

  163 mips_value: FLOAT_ID
  164           | NUM_ID

  165 dec_value: FLOAT_ID
  166          | NUM_ID

  167 job_call: mutable DOT GET_MEMORY LP RP

  168 memory_construct: mutable EQUAL memory_definition

  169 memory_definition: MEMORY LP parameters_memory_def RP

  170 parameters_memory_def: memory_typent COMMA mem_sizent name_optional

  171 memory_typent: SQ mem_value SQ
  172              | MEMORY_TYPE EQUAL SQ mem_value SQ

  173 mem_sizent: mem_size_value
  174           | MEM_SIZE EQUAL mem_size_value

  175 mem_value: PRIMARY
  176          | SECONDARY
  177          | CACHE

  178 mem_size_value: NUM_ID
  179               | FLOAT_ID

  180 memory_call: mutable DOT GET_AVAILABLE_MEMORY LP RP


Terminals, with rules where they appear

$end (0) 0
error (256)
MINUS (258) 30
PLUS (259) 29
MUL (260) 33
DIV (261) 34
PLUS_EQUAL (262) 41
MINUS_EQUAL (263) 42
MUL_EQUAL (264) 43
DIV_EQUAL (265) 44
PLUS_PLUS (266) 45 47
MINUS_MINUS (267) 46 48
EQUAL (268) 40 82 94 98 100 101 121 125 128 131 135 138 140 142 151
    153 168 172 174
IF (269) 52 53
ELSE (270) 53 54
WHILE (271) 61
SWITCH (272) 20 21
CASE (273) 56
FOR (274) 62
DEFAULT (275) 57
FLOAT_ID (276) 36 133 136 159 161 163 165 179
NUM_ID (277) 37 56 107 132 137 155 157 160 162 164 166 178
ID (278) 49 126 129
BREAK (279) 10 11
CONTINUE (280) 12 13
RETURN (281) 14 15
WAIT (282) 16 17
GR (283) 66
LR (284) 67
EQUAL_EQUAL (285) 68
LR_EQUAL (286) 69
GR_EQUAL (287) 70
NOT_EQUAL (288) 71
AND_AND (289) 72
AND (290) 73
OR_OR (291) 74
OR (292) 75
NOT (293) 26
SEMI (294) 2 3 4 5 6 7 10 11 12 13 14 15 16 17 22 23 62
LP (295) 20 21 39 52 53 61 62 82 87 88 89 90 91 92 93 99 110 111 112
    113 114 122 138 152 167 169 180
RP (296) 20 21 39 52 53 61 62 82 87 88 89 90 91 92 93 99 110 111 112
    113 114 122 138 152 167 169 180
LB (297) 20 21 52 53 54 61 62
RB (298) 20 21 52 53 54 61 62
LS (299) 50 116 118 145 158
RS (300) 50 116 118 145 158
COMMA (301) 64 94 95 100 101 119 123 139 153 158 170
COLON (302) 56 57 100
NAME (303) 94
DOT (304) 87 88 89 90 91 92 93 110 111 112 114 167 180
DQ (305) 82 94 95 124 125 127 128 142 143
SQ (306) 100 171 172
PROCESSOR (307) 82 99
ISA (308) 100
CLOCK_SPEED (309) 100
L1_MEMORY (310) 100
L2_MEMORY (311) 101
ARM (312) 103
AMD (313) 104
CDC (314) 105
MIPS (315) 106
IS_RUNNING (316) 110
SUBMIT_JOBS (317) 111
GET_CLOCK_SPEED (318) 112
RUN (319) 113
DISCARD_JOB (320) 114
CLUSTER (321) 138
PROCESSORS (322) 140
TOPOLOGY (323) 142
STAR (324) 146
BUS (325) 147
RING (326) 148
LINK_BANDWIDTH (327)
LINK_CAPACITY (328)
MEMORY (329) 169
MEMORY_TYPE (330) 172
MEM_SIZE (331) 174
PRIMARY (332) 175
SECONDARY (333) 176
CACHE (334) 177
GET_AVAILABLE_MEMORY (335) 180
LINK (336) 122
START_POINT (337) 125
END_POINT (338) 128
BANDWIDTH (339) 131
CHANNEL_CAPACITY (340) 135
JOB (341) 152
JOB_ID (342) 153
FLOPS_REQUIRED (343) 153
DEADLINE (344) 153
MEM_REQUIRED (345) 153
AFFINITY (346) 153
GET_MEMORY (347) 167
SCHEDULER (348) 82
FIRST_COME_FIRST_SERVE (349) 87
SHORTEST_JOB_NEXT (350) 88
PRIORITY_SCHEDULING (351) 89
SHORTEST_REMAINING_TIME (352) 90
ROUND_ROBIN (353) 91
MULTI_LEVEL_QUEUES (354) 92
SCHEDULE_OBJECT (355) 93


Nonterminals, with rules where they appear

$accept (101)
    on left: 0
program (102)
    on left: 1, on right: 0
statement (103)
    on left: 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22
    23, on right: 1 3 5 7 8 10 12 14 16 18 21 22 52 53 54 56 57 61
    62
expression (104)
    on left: 24 25 26 27 28, on right: 2 3 20 21 25 26 27 39 40 41
    42 43 44 50 52 53 61 62 149 150 154 156
expression_prime (105)
    on left: 29 30 31, on right: 24 25 29 30
term (106)
    on left: 32, on right: 24 25 29 30
term_prime (107)
    on left: 33 34 35, on right: 32 33 34
factor (108)
    on left: 36 37 38 39, on right: 32 33 34
assignment (109)
    on left: 40 41 42 43 44 45 46 47 48, on right: 4 5 63 64
mutable (110)
    on left: 49 50, on right: 38 40 41 42 43 44 45 46 47 48 50 82 87
    88 89 90 91 92 93 97 98 108 110 111 112 114 115 117 119 120 121
    138 144 151 167 168 180
epsilon (111)
    on left: 51, on right: 31 35 55 58 65 96
condition_statement (112)
    on left: 52, on right: 18 19
new_condition (113)
    on left: 53 54 55, on right: 52 53
cases (114)
    on left: 56 57 58, on right: 20 21 56
loop_statement (115)
    on left: 59 60, on right: 8 9
while_body (116)
    on left: 61, on right: 59
for_body (117)
    on left: 62, on right: 60
list_assignment (118)
    on left: 63, on right: 62
next_assignment (119)
    on left: 64 65, on right: 63 64
op (120)
    on left: 66 67 68 69 70 71 72 73 74 75, on right: 25 27
construct (121)
    on left: 76 77 78 79 80 81, on right: 22 23
scheduler_construct (122)
    on left: 82, on right: 81
function_call (123)
    on left: 83 84 85 86, on right: 27 28
scheduler_call (124)
    on left: 87 88 89 90 91 92 93, on right: 86
name_optional (125)
    on left: 94 95 96, on right: 101 102 123 139 170
name_value (126)
    on left: 97, on right: 94 95
process_construct (127)
    on left: 98, on right: 76
process_definition (128)
    on left: 99, on right: 98
parameters_process_def (129)
    on left: 100, on right: 99
memory_optional_l2 (130)
    on left: 101 102, on right: 100
isa_value (131)
    on left: 103 104 105 106, on right: 100
clock_value (132)
    on left: 107, on right: 100
l1_value (133)
    on left: 108 109, on right: 100 101
process_call (134)
    on left: 110 111 112 113 114, on right: 83
param_process_submit_discard_jobs (135)
    on left: 115 116, on right: 111 114
param_runprocess (136)
    on left: 117 118, on right: 113
lists (137)
    on left: 119 120, on right: 116 118 119 145
link_construct (138)
    on left: 121, on right: 79
link_definition (139)
    on left: 122, on right: 121
parameters_link_def (140)
    on left: 123, on right: 122
start_pointnt (141)
    on left: 124 125, on right: 123
start_value (142)
    on left: 126, on right: 124 125
end_pointnt (143)
    on left: 127 128, on right: 123
end_value (144)
    on left: 129, on right: 127 128
bandwidthnt (145)
    on left: 130 131, on right: 123
bandwidth_value (146)
    on left: 132 133, on right: 130 131
channel_capacitynt (147)
    on left: 134 135, on right: 123
channel_capacity_value (148)
    on left: 136 137, on right: 134 135
cluster_construct (149)
    on left: 138, on right: 80
parameters_cluster_def (150)
    on left: 139, on right: 138
processorsnt (151)
    on left: 140 141, on right: 139
topologynt (152)
    on left: 142 143, on right: 139
param1_value (153)
    on left: 144 145, on right: 140 141
topology_value (154)
    on left: 146 147 148, on right: 142 143
link_bandwidth_value (155)
    on left: 149, on right: 139
link_capicity_value (156)
    on left: 150, on right: 139
job_construct (157)
    on left: 151, on right: 77
job_definition (158)
    on left: 152, on right: 151
parameters_job_def (159)
    on left: 153, on right: 152
job_id_value (160)
    on left: 154, on right: 153
flops_required_value (161)
    on left: 155, on right: 153
deadline_value (162)
    on left: 156, on right: 153
mem_required_value (163)
    on left: 157, on right: 153
affinity_value (164)
    on left: 158, on right: 153
amd_value (165)
    on left: 159 160, on right: 158
cdc_value (166)
    on left: 161 162, on right: 158
mips_value (167)
    on left: 163 164, on right: 158
dec_value (168)
    on left: 165 166, on right: 158
job_call (169)
    on left: 167, on right: 84
memory_construct (170)
    on left: 168, on right: 78
memory_definition (171)
    on left: 169, on right: 109 168
parameters_memory_def (172)
    on left: 170, on right: 169
memory_typent (173)
    on left: 171 172, on right: 170
mem_sizent (174)
    on left: 173 174, on right: 170
mem_value (175)
    on left: 175 176 177, on right: 171 172
mem_size_value (176)
    on left: 178 179, on right: 173 174
memory_call (177)
    on left: 180, on right: 85


State 0

    0 $accept: . program $end

    PLUS_PLUS    shift, and go to state 1
    MINUS_MINUS  shift, and go to state 2
    IF           shift, and go to state 3
    WHILE        shift, and go to state 4
    SWITCH       shift, and go to state 5
    FOR          shift, and go to state 6
    FLOAT_ID     shift, and go to state 7
    NUM_ID       shift, and go to state 8
    ID           shift, and go to state 9
    BREAK        shift, and go to state 10
    CONTINUE     shift, and go to state 11
    RETURN       shift, and go to state 12
    WAIT         shift, and go to state 13
    NOT          shift, and go to state 14
    SEMI         shift, and go to state 15
    LP           shift, and go to state 16
    RUN          shift, and go to state 17

    program              go to state 18
    statement            go to state 19
    expression           go to state 20
    term                 go to state 21
    factor               go to state 22
    assignment           go to state 23
    mutable              go to state 24
    condition_statement  go to state 25
    loop_statement       go to state 26
    while_body           go to state 27
    for_body             go to state 28
    construct            go to state 29
    scheduler_construct  go to state 30
    function_call        go to state 31
    scheduler_call       go to state 32
    process_construct    go to state 33
    process_call         go to state 34
    link_construct       go to state 35
    cluster_construct    go to state 36
    job_construct        go to state 37
    job_call             go to state 38
    memory_construct     go to state 39
    memory_call          go to state 40


State 1

   47 assignment: PLUS_PLUS . mutable

    ID  shift, and go to state 9

    mutable  go to state 41


State 2

   48 assignment: MINUS_MINUS . mutable

    ID  shift, and go to state 9

    mutable  go to state 42


State 3

   52 condition_statement: IF . LP expression RP LB statement RB new_condition

    LP  shift, and go to state 43


State 4

   61 while_body: WHILE . LP expression RP LB statement RB

    LP  shift, and go to state 44


State 5

   20 statement: SWITCH . LB expression RB LP cases RP
   21          | SWITCH . LB expression RB LP cases RP statement

    LB  shift, and go to state 45


State 6

   62 for_body: FOR . LP list_assignment SEMI expression SEMI list_assignment RP LB statement RB

    LP  shift, and go to state 46


State 7

   36 factor: FLOAT_ID .

    $default  reduce using rule 36 (factor)


State 8

   37 factor: NUM_ID .

    $default  reduce using rule 37 (factor)


State 9

   49 mutable: ID .

    $default  reduce using rule 49 (mutable)


State 10

   10 statement: BREAK . SEMI statement
   11          | BREAK . SEMI

    SEMI  shift, and go to state 47


State 11

   12 statement: CONTINUE . SEMI statement
   13          | CONTINUE . SEMI

    SEMI  shift, and go to state 48


State 12

   14 statement: RETURN . SEMI statement
   15          | RETURN . SEMI

    SEMI  shift, and go to state 49


State 13

   16 statement: WAIT . SEMI statement
   17          | WAIT . SEMI

    SEMI  shift, and go to state 50


State 14

   26 expression: NOT . expression

    FLOAT_ID  shift, and go to state 7
    NUM_ID    shift, and go to state 8
    ID        shift, and go to state 9
    NOT       shift, and go to state 14
    LP        shift, and go to state 16
    RUN       shift, and go to state 17

    expression      go to state 51
    term            go to state 21
    factor          go to state 22
    mutable         go to state 52
    function_call   go to state 31
    scheduler_call  go to state 32
    process_call    go to state 34
    job_call        go to state 38
    memory_call     go to state 40


State 15

    6 statement: SEMI .
    7          | SEMI . statement

    PLUS_PLUS    shift, and go to state 1
    MINUS_MINUS  shift, and go to state 2
    IF           shift, and go to state 3
    WHILE        shift, and go to state 4
    SWITCH       shift, and go to state 5
    FOR          shift, and go to state 6
    FLOAT_ID     shift, and go to state 7
    NUM_ID       shift, and go to state 8
    ID           shift, and go to state 9
    BREAK        shift, and go to state 10
    CONTINUE     shift, and go to state 11
    RETURN       shift, and go to state 12
    WAIT         shift, and go to state 13
    NOT          shift, and go to state 14
    SEMI         shift, and go to state 15
    LP           shift, and go to state 16
    RUN          shift, and go to state 17

    $default  reduce using rule 6 (statement)

    statement            go to state 53
    expression           go to state 20
    term                 go to state 21
    factor               go to state 22
    assignment           go to state 23
    mutable              go to state 24
    condition_statement  go to state 25
    loop_statement       go to state 26
    while_body           go to state 27
    for_body             go to state 28
    construct            go to state 29
    scheduler_construct  go to state 30
    function_call        go to state 31
    scheduler_call       go to state 32
    process_construct    go to state 33
    process_call         go to state 34
    link_construct       go to state 35
    cluster_construct    go to state 36
    job_construct        go to state 37
    job_call             go to state 38
    memory_construct     go to state 39
    memory_call          go to state 40


State 16

   39 factor: LP . expression RP

    FLOAT_ID  shift, and go to state 7
    NUM_ID    shift, and go to state 8
    ID        shift, and go to state 9
    NOT       shift, and go to state 14
    LP        shift, and go to state 16
    RUN       shift, and go to state 17

    expression      go to state 54
    term            go to state 21
    factor          go to state 22
    mutable         go to state 52
    function_call   go to state 31
    scheduler_call  go to state 32
    process_call    go to state 34
    job_call        go to state 38
    memory_call     go to state 40


State 17

  113 process_call: RUN . LP param_runprocess RP

    LP  shift, and go to state 55


State 18

    0 $accept: program . $end

    $end  shift, and go to state 56


State 19

    1 program: statement .

    $default  reduce using rule 1 (program)


State 20

    2 statement: expression . SEMI
    3          | expression . SEMI statement

    SEMI  shift, and go to state 57


State 21

   24 expression: term . expression_prime
   25           | term . expression_prime op expression

    MINUS  shift, and go to state 58
    PLUS   shift, and go to state 59

    $default  reduce using rule 51 (epsilon)

    expression_prime  go to state 60
    epsilon           go to state 61


State 22

   32 term: factor . term_prime

    MUL  shift, and go to state 62
    DIV  shift, and go to state 63

    $default  reduce using rule 51 (epsilon)

    term_prime  go to state 64
    epsilon     go to state 65


State 23

    4 statement: assignment . SEMI
    5          | assignment . SEMI statement

    SEMI  shift, and go to state 66


State 24

   38 factor: mutable .
   40 assignment: mutable . EQUAL expression
   41           | mutable . PLUS_EQUAL expression
   42           | mutable . MINUS_EQUAL expression
   43           | mutable . MUL_EQUAL expression
   44           | mutable . DIV_EQUAL expression
   45           | mutable . PLUS_PLUS
   46           | mutable . MINUS_MINUS
   50 mutable: mutable . LS expression RS
   82 scheduler_construct: mutable . EQUAL SCHEDULER LP PROCESSOR EQUAL DQ mutable DQ RP
   87 scheduler_call: mutable . DOT FIRST_COME_FIRST_SERVE LP RP
   88               | mutable . DOT SHORTEST_JOB_NEXT LP RP
   89               | mutable . DOT PRIORITY_SCHEDULING LP RP
   90               | mutable . DOT SHORTEST_REMAINING_TIME LP RP
   91               | mutable . DOT ROUND_ROBIN LP RP
   92               | mutable . DOT MULTI_LEVEL_QUEUES LP RP
   93               | mutable . DOT SCHEDULE_OBJECT LP mutable RP
   98 process_construct: mutable . EQUAL process_definition
  110 process_call: mutable . DOT IS_RUNNING LP RP
  111             | mutable . DOT SUBMIT_JOBS LP param_process_submit_discard_jobs RP
  112             | mutable . DOT GET_CLOCK_SPEED LP RP
  114             | mutable . DOT DISCARD_JOB LP param_process_submit_discard_jobs RP
  121 link_construct: mutable . EQUAL link_definition
  138 cluster_construct: mutable . EQUAL CLUSTER LP parameters_cluster_def RP
  151 job_construct: mutable . EQUAL job_definition
  167 job_call: mutable . DOT GET_MEMORY LP RP
  168 memory_construct: mutable . EQUAL memory_definition
  180 memory_call: mutable . DOT GET_AVAILABLE_MEMORY LP RP

    PLUS_EQUAL   shift, and go to state 67
    MINUS_EQUAL  shift, and go to state 68
    MUL_EQUAL    shift, and go to state 69
    DIV_EQUAL    shift, and go to state 70
    PLUS_PLUS    shift, and go to state 71
    MINUS_MINUS  shift, and go to state 72
    EQUAL        shift, and go to state 73
    LS           shift, and go to state 74
    DOT          shift, and go to state 75

    $default  reduce using rule 38 (factor)


State 25

   18 statement: condition_statement . statement
   19          | condition_statement .

    PLUS_PLUS    shift, and go to state 1
    MINUS_MINUS  shift, and go to state 2
    IF           shift, and go to state 3
    WHILE        shift, and go to state 4
    SWITCH       shift, and go to state 5
    FOR          shift, and go to state 6
    FLOAT_ID     shift, and go to state 7
    NUM_ID       shift, and go to state 8
    ID           shift, and go to state 9
    BREAK        shift, and go to state 10
    CONTINUE     shift, and go to state 11
    RETURN       shift, and go to state 12
    WAIT         shift, and go to state 13
    NOT          shift, and go to state 14
    SEMI         shift, and go to state 15
    LP           shift, and go to state 16
    RUN          shift, and go to state 17

    $default  reduce using rule 19 (statement)

    statement            go to state 76
    expression           go to state 20
    term                 go to state 21
    factor               go to state 22
    assignment           go to state 23
    mutable              go to state 24
    condition_statement  go to state 25
    loop_statement       go to state 26
    while_body           go to state 27
    for_body             go to state 28
    construct            go to state 29
    scheduler_construct  go to state 30
    function_call        go to state 31
    scheduler_call       go to state 32
    process_construct    go to state 33
    process_call         go to state 34
    link_construct       go to state 35
    cluster_construct    go to state 36
    job_construct        go to state 37
    job_call             go to state 38
    memory_construct     go to state 39
    memory_call          go to state 40


State 26

    8 statement: loop_statement . statement
    9          | loop_statement .

    PLUS_PLUS    shift, and go to state 1
    MINUS_MINUS  shift, and go to state 2
    IF           shift, and go to state 3
    WHILE        shift, and go to state 4
    SWITCH       shift, and go to state 5
    FOR          shift, and go to state 6
    FLOAT_ID     shift, and go to state 7
    NUM_ID       shift, and go to state 8
    ID           shift, and go to state 9
    BREAK        shift, and go to state 10
    CONTINUE     shift, and go to state 11
    RETURN       shift, and go to state 12
    WAIT         shift, and go to state 13
    NOT          shift, and go to state 14
    SEMI         shift, and go to state 15
    LP           shift, and go to state 16
    RUN          shift, and go to state 17

    $default  reduce using rule 9 (statement)

    statement            go to state 77
    expression           go to state 20
    term                 go to state 21
    factor               go to state 22
    assignment           go to state 23
    mutable              go to state 24
    condition_statement  go to state 25
    loop_statement       go to state 26
    while_body           go to state 27
    for_body             go to state 28
    construct            go to state 29
    scheduler_construct  go to state 30
    function_call        go to state 31
    scheduler_call       go to state 32
    process_construct    go to state 33
    process_call         go to state 34
    link_construct       go to state 35
    cluster_construct    go to state 36
    job_construct        go to state 37
    job_call             go to state 38
    memory_construct     go to state 39
    memory_call          go to state 40


State 27

   59 loop_statement: while_body .

    $default  reduce using rule 59 (loop_statement)


State 28

   60 loop_statement: for_body .

    $default  reduce using rule 60 (loop_statement)


State 29

   22 statement: construct . SEMI statement
   23          | construct . SEMI

    SEMI  shift, and go to state 78


State 30

   81 construct: scheduler_construct .

    $default  reduce using rule 81 (construct)


State 31

   27 expression: function_call . op expression
   28           | function_call .

    GR           shift, and go to state 79
    LR           shift, and go to state 80
    EQUAL_EQUAL  shift, and go to state 81
    LR_EQUAL     shift, and go to state 82
    GR_EQUAL     shift, and go to state 83
    NOT_EQUAL    shift, and go to state 84
    AND_AND      shift, and go to state 85
    AND          shift, and go to state 86
    OR_OR        shift, and go to state 87
    OR           shift, and go to state 88

    $default  reduce using rule 28 (expression)

    op  go to state 89


State 32

   86 function_call: scheduler_call .

    $default  reduce using rule 86 (function_call)


State 33

   76 construct: process_construct .

    $default  reduce using rule 76 (construct)


State 34

   83 function_call: process_call .

    $default  reduce using rule 83 (function_call)


State 35

   79 construct: link_construct .

    $default  reduce using rule 79 (construct)


State 36

   80 construct: cluster_construct .

    $default  reduce using rule 80 (construct)


State 37

   77 construct: job_construct .

    $default  reduce using rule 77 (construct)


State 38

   84 function_call: job_call .

    $default  reduce using rule 84 (function_call)


State 39

   78 construct: memory_construct .

    $default  reduce using rule 78 (construct)


State 40

   85 function_call: memory_call .

    $default  reduce using rule 85 (function_call)


State 41

   47 assignment: PLUS_PLUS mutable .
   50 mutable: mutable . LS expression RS

    LS  shift, and go to state 74

    $default  reduce using rule 47 (assignment)


State 42

   48 assignment: MINUS_MINUS mutable .
   50 mutable: mutable . LS expression RS

    LS  shift, and go to state 74

    $default  reduce using rule 48 (assignment)


State 43

   52 condition_statement: IF LP . expression RP LB statement RB new_condition

    FLOAT_ID  shift, and go to state 7
    NUM_ID    shift, and go to state 8
    ID        shift, and go to state 9
    NOT       shift, and go to state 14
    LP        shift, and go to state 16
    RUN       shift, and go to state 17

    expression      go to state 90
    term            go to state 21
    factor          go to state 22
    mutable         go to state 52
    function_call   go to state 31
    scheduler_call  go to state 32
    process_call    go to state 34
    job_call        go to state 38
    memory_call     go to state 40


State 44

   61 while_body: WHILE LP . expression RP LB statement RB

    FLOAT_ID  shift, and go to state 7
    NUM_ID    shift, and go to state 8
    ID        shift, and go to state 9
    NOT       shift, and go to state 14
    LP        shift, and go to state 16
    RUN       shift, and go to state 17

    expression      go to state 91
    term            go to state 21
    factor          go to state 22
    mutable         go to state 52
    function_call   go to state 31
    scheduler_call  go to state 32
    process_call    go to state 34
    job_call        go to state 38
    memory_call     go to state 40


State 45

   20 statement: SWITCH LB . expression RB LP cases RP
   21          | SWITCH LB . expression RB LP cases RP statement

    FLOAT_ID  shift, and go to state 7
    NUM_ID    shift, and go to state 8
    ID        shift, and go to state 9
    NOT       shift, and go to state 14
    LP        shift, and go to state 16
    RUN       shift, and go to state 17

    expression      go to state 92
    term            go to state 21
    factor          go to state 22
    mutable         go to state 52
    function_call   go to state 31
    scheduler_call  go to state 32
    process_call    go to state 34
    job_call        go to state 38
    memory_call     go to state 40


State 46

   62 for_body: FOR LP . list_assignment SEMI expression SEMI list_assignment RP LB statement RB

    PLUS_PLUS    shift, and go to state 1
    MINUS_MINUS  shift, and go to state 2
    ID           shift, and go to state 9

    assignment       go to state 93
    mutable          go to state 94
    list_assignment  go to state 95


State 47

   10 statement: BREAK SEMI . statement
   11          | BREAK SEMI .

    PLUS_PLUS    shift, and go to state 1
    MINUS_MINUS  shift, and go to state 2
    IF           shift, and go to state 3
    WHILE        shift, and go to state 4
    SWITCH       shift, and go to state 5
    FOR          shift, and go to state 6
    FLOAT_ID     shift, and go to state 7
    NUM_ID       shift, and go to state 8
    ID           shift, and go to state 9
    BREAK        shift, and go to state 10
    CONTINUE     shift, and go to state 11
    RETURN       shift, and go to state 12
    WAIT         shift, and go to state 13
    NOT          shift, and go to state 14
    SEMI         shift, and go to state 15
    LP           shift, and go to state 16
    RUN          shift, and go to state 17

    $default  reduce using rule 11 (statement)

    statement            go to state 96
    expression           go to state 20
    term                 go to state 21
    factor               go to state 22
    assignment           go to state 23
    mutable              go to state 24
    condition_statement  go to state 25
    loop_statement       go to state 26
    while_body           go to state 27
    for_body             go to state 28
    construct            go to state 29
    scheduler_construct  go to state 30
    function_call        go to state 31
    scheduler_call       go to state 32
    process_construct    go to state 33
    process_call         go to state 34
    link_construct       go to state 35
    cluster_construct    go to state 36
    job_construct        go to state 37
    job_call             go to state 38
    memory_construct     go to state 39
    memory_call          go to state 40


State 48

   12 statement: CONTINUE SEMI . statement
   13          | CONTINUE SEMI .

    PLUS_PLUS    shift, and go to state 1
    MINUS_MINUS  shift, and go to state 2
    IF           shift, and go to state 3
    WHILE        shift, and go to state 4
    SWITCH       shift, and go to state 5
    FOR          shift, and go to state 6
    FLOAT_ID     shift, and go to state 7
    NUM_ID       shift, and go to state 8
    ID           shift, and go to state 9
    BREAK        shift, and go to state 10
    CONTINUE     shift, and go to state 11
    RETURN       shift, and go to state 12
    WAIT         shift, and go to state 13
    NOT          shift, and go to state 14
    SEMI         shift, and go to state 15
    LP           shift, and go to state 16
    RUN          shift, and go to state 17

    $default  reduce using rule 13 (statement)

    statement            go to state 97
    expression           go to state 20
    term                 go to state 21
    factor               go to state 22
    assignment           go to state 23
    mutable              go to state 24
    condition_statement  go to state 25
    loop_statement       go to state 26
    while_body           go to state 27
    for_body             go to state 28
    construct            go to state 29
    scheduler_construct  go to state 30
    function_call        go to state 31
    scheduler_call       go to state 32
    process_construct    go to state 33
    process_call         go to state 34
    link_construct       go to state 35
    cluster_construct    go to state 36
    job_construct        go to state 37
    job_call             go to state 38
    memory_construct     go to state 39
    memory_call          go to state 40


State 49
